# machanguitos

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.org  TODO.org  about.html  config.h.in  index.html  update_doxydoc.sh
cmake/Modules/: FindLuaJIT.cmake
common/: CMakeLists.txt  agentfactory.h  agentid.h  agentid.hpp  datastore.cpp  datastore.h  datastore.hpp  log.cpp  log.hpp  mpi.hpp  scriptvalue.cpp  scriptvalue.hpp  singleton.hpp  util.cpp  util.h  util.hpp
css/: docs.css
dev/: agentclass_8cpp.html  agentclass_8cpp.js  agentclass_8cpp_source.html  agentclass_8h.html  agentclass_8h_source.html  agentclass_8hpp.html  agentclass_8hpp.js  agentclass_8hpp_source.html  agentfactory_8cpp.html  agentfactory_8cpp.js  agentfactory_8cpp_source.html  agentfactory_8h.html  agentfactory_8h_source.html  agentfactory_8hpp.html  agentfactory_8hpp_source.html  agentid_8hpp.html  agentid_8hpp_source.html  agentinstance_8cpp.html  agentinstance_8cpp_source.html  agentinstance_8h.html  agentinstance_8h_source.html  agentinstance_8hpp.html  agentinstance_8hpp.js  agentinstance_8hpp_source.html  annotated.html  annotated.js  bcon_8h.html  bcon_8h.js  bcon_8h_source.html  bson_8h.html  bson_8h.js  bson_8h_source.html  classAgent_1_1AgentClass-members.html  classAgent_1_1AgentClass.html  classAgent_1_1AgentClass.js  classAgent_1_1AgentFactory-members.html  classAgent_1_1AgentFactory.html  classAgent_1_1AgentFactory.js  classAgent_1_1AgentId-members.html  classAgent_1_1AgentId.html  (+404 more)
dev/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_15.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.html  all_61.js  all_62.html  all_62.js  all_63.html  all_63.js  all_64.html  all_64.js  all_65.html  all_65.js  all_66.html  all_66.js  all_67.html  all_67.js  all_69.html  all_69.js  all_6a.html  all_6c.html  all_6c.js  all_6d.html  all_6d.js  all_6e.html  all_6e.js  all_6f.html  all_6f.js  all_7.js  all_70.html  all_70.js  (+190 more)
doc/: doxydoc  gpl3_header  intro.tex
example/: cat.lua  cow.lua  ex01.lua  grassupdate.lua
examples/: areaupdate.lua  cow.lua  dayupdate.lua  dog.lua  ex02.lua  ex03.lua  ex04.lua  fire.lua  fireupdate.lua  grassupdate.lua
lua-5.2/: CMakeLists.txt
lua-5.2/src/: CMakeLists.txt
machen/: CMakeLists.txt  agentclass.cpp  agentclass.hpp  agentfactory.cpp  agentfactory.hpp  agentinstance.cpp  agentinstance.hpp  client.cpp  client.hpp  clientlocal.cpp  clientlocal.hpp  clientremote.cpp  clientremote.hpp  configlib.cpp  configlib.hpp  datalib.cpp  datalib.hpp  dataserver.cpp  dataserver.hpp  dataserverlocal.cpp  dataserverlocal.hpp  dataserverremote.cpp  dataserverremote.hpp  engine.cpp  engine.hpp  main.cpp  mpiclientserver.cpp  mpiclientserver.hpp  mpidataserver.cpp  mpidataserver.hpp  mpidefs.cpp  mpidefs.hpp  mpitags.hpp  mpiworker.cpp  mpiworker.hpp  raster.cpp  raster.hpp  rastergdal.cpp  rastergdal.hpp  rasterlib.cpp  (+5 more)
mongoc/: CMakeLists.txt
outcsv/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  agentclass.cpp  agentclass.h  agentclass.hpp  agentfactory.cpp  agentfactory.h  agentinstance.cpp  agentinstance.h  agentinstance.hpp  client.cpp  client.h  clientlocal.cpp  clientlocal.h  clientlocal.hpp  clientremote.cpp  clientremote.h  configlib.cpp  configlib.h  datastore.cpp  datastore.h  main.cpp  mpiclient.cpp  mpiclient.h  mpitags.h  mpiworker.cpp  mpiworker.h  mpiworker.hpp  scriptvalue.cpp  scriptvalue.h  server.cpp  server.h  server.hpp  singleton.h  util.cpp  util.h
test/: CMakeLists.txt  test_cpp11.cpp  test_gdal.cpp  test_mongo.cpp  test_uuid.cpp
